Moved config to own file. Refactored pipeline to use config type.

--- a/marketData.cabal
+++ b/marketData.cabal
@@ -21,6 +21,7 @@ executable market-data
   other-modules:         Network
                        , Parser.Quote
                        , Pipeline
+                       , Config
   build-depends:       base >=4.10 && <4.11
                        , network
                        , binary >= 0.8.5.1
