--- a/market-data.cabal
+++ b/market-data.cabal
@@ -22,8 +22,8 @@ executable market-data
                        , Parser.Quote
                        , Pipeline
                        , Config
-  build-depends:       base >=4.10 && <4.11
-                       , network
+  build-depends:       base >=4.11 && <5
+                       , network == 2.6.3.2
                        , binary >= 0.8.5.1
                        , conduit >= 1.3.0.3
                        , conduit-extra >= 1.3.0
@@ -34,5 +34,6 @@ executable market-data
                        , Decimal == 0.5.1
                        , parsergen == 0.2.0.8
                        , cmdargs == 0.10.20
+                       , iproute >= 1.7.7
   hs-source-dirs:      src
   default-language:    Haskell2010
